update player network generation and add site nav

--- a/web_app/index.html
+++ b/web_app/index.html
@@ -11,8 +11,9 @@
     <div id="credit">
       <p><i>Created by <a href="https://linktr.ee/chenry22">@chenry22</a></i></p>
     </div>
-    <div id="physics_toggler_div">
-        <button id="physics_toggler">Toggle Physics (Enabled)</button>
+    <div id="graph-controls">
+      <a href="player_index">Visit Player Index</a>
+      <button id="physics_toggler">Toggle Physics (Enabled)</button>
     </div>
     <div id="help-div">
       <div id="help-button-div">
