--- a/web_app/player_index.html
+++ b/web_app/player_index.html
@@ -8,8 +8,9 @@
   <body>
     <div id="container" style="overflow: hidden auto;">
         <div id="player-index">
-            <h2>2024-25 NBA Player Index</h2>
-            <p>Use this to go to a specific player's teammate network. Only players who logged minutes during the 2024-25 regular season are currently indexed.</p>
+          <div style="flex: 1 0; text-align: left;"><a href="/">&larr; Back to Main</a></div>
+          <h2>2024-25 NBA Player Index</h2>
+          <p>Use this to go to a specific player's teammate network. Only players who logged minutes during the 2024-25 regular season are currently indexed.</p>
         </div>
     </div>
     <script type="module" src="/src/player_index.js"></script>
