--- a/web_app/players.html
+++ b/web_app/players.html
@@ -20,6 +20,10 @@
           <input type="number" id="min-txt" min="1" max="4001" value="1" />
           <input type="range" id="min-slider" name="mins" min="1" max="4001" step="100" value="1"/>
         </div>
+         <div class="slider-div">
+          <label id="depth-label" for="depth">Depth: 1</label>
+          <input type="range" id="depth-slider" name="depth" min="1" max="4" step="1" value="1"/>
+        </div>
         <button id="apply-filters">Apply Filters</button>
       </div>
     </div>
